[NTOSKRNL] Fix symbolic names list bound check in IopCreateArcNamesCd(). Spotted by "msuhanov"

CORE-9698 #resolve #comment Fixed in r67747. Thanks!

svn path=/trunk/; revision=67747